--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,13 +3,8 @@
     "CustomizeLib": {
       "commandName": "Executable",
       "executablePath": "C:\\Windows\\System32\\cmd.exe",
-      "commandLineArgs": "/c \"copy /Y \"CustomizeLib.dll\" \"D:\\SteamLibrary\\steamapps\\common\\StickFightTheGame\\BepInEx\\plugins\\CustomizeLib.dll\" && start steam://rungameid/674940\"",
+      "commandLineArgs": "/c \"start steam://rungameid/674940\"",
       "nativeDebugging": false
-    },
-    "copy": {
-      "commandName": "Executable",
-      "executablePath": "C:\\Windows\\System32\\cmd.exe",
-      "commandLineArgs": "/c \"copy /Y \"CustomizeLib.dll\" \"D:\\SteamLibrary\\steamapps\\common\\StickFightTheGame\\BepInEx\\plugins\\CustomizeLib.dll\""
     }
   }
 }
